[gd_scene load_steps=23 format=2]

[ext_resource path="res://Menu/PantallaInicio.gd" type="Script" id=1]
[ext_resource path="res://World/Backgrounds/menu/Blue Yellow Pixelation Coming Soon Video.png" type="Texture" id=2]
[ext_resource path="res://Resource/Music/little-slimex27s-adventure-151007.mp3" type="AudioStream" id=3]
[ext_resource path="res://World/Backgrounds/menu/m-a-g-i-c-2-4-2025_1_-removebg-preview.png" type="Texture" id=4]
[ext_resource path="res://Resource/Font/NormalFont.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.129412 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 1, 0.972549, 0, 0.631373 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 0.74902, 0, 0.513726 )

[sub_resource type="DynamicFont" id=8]
size = 30
outline_size = 1
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.74902, 0, 0.513726 )

[sub_resource type="Animation" id=18]
resource_name = "audio_fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuPanel/Audio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.791, 0.0 ]
}

[sub_resource type="Animation" id=12]
resource_name = "audio_fade_out"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("MenuPanel/Audio:volume_db")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 2.21914, 1 ),
"update": 0,
"values": [ 0.0, -30.0 ]
}

[sub_resource type="Animation" id=19]
resource_name = "fade_in_background"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_in_background "
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "fade_out_elements"
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.137255, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "logo_drop"
tracks/0/type = "value"
tracks/0/path = NodePath("Logo:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.921569, 0.909804, 0.909804, 0 ), Color( 0.921569, 0.909804, 0.909804, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "logo_dropp_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Logo2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "menu_popup"
tracks/0/type = "value"
tracks/0/path = NodePath("MenuPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1.23115, 0.0384732 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="PantallaInicio" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 1028.0
margin_bottom = 602.0
texture = ExtResource( 2 )
expand = true

[node name="Logo" type="TextureRect" parent="."]
modulate = Color( 0.921569, 0.909804, 0.909804, 1 )
margin_left = 2.0
margin_top = 76.0
margin_right = 92.0
margin_bottom = 473.0
rect_pivot_offset = Vector2( 62, 236 )
texture = ExtResource( 4 )
expand = true

[node name="Logo2" type="TextureRect" parent="."]
margin_left = 932.0
margin_top = 79.0
margin_right = 1022.0
margin_bottom = 476.0
rect_pivot_offset = Vector2( 62, 236 )
texture = ExtResource( 4 )
expand = true

[node name="MenuPanel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1025.0
margin_bottom = 607.0

[node name="VBoxContainer" type="VBoxContainer" parent="MenuPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -294.5
margin_top = 54.5
margin_right = 281.5
margin_bottom = 230.5

[node name="PlayBtn" type="Button" parent="MenuPanel/VBoxContainer"]
margin_right = 576.0
margin_bottom = 41.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/disabled = SubResource( 15 )
custom_styles/normal = SubResource( 3 )
text = "JUGAR"

[node name="ExitBtn" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 45.0
margin_right = 576.0
margin_bottom = 86.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
text = "SALIR"

[node name="MoreGamesBtn" type="Button" parent="MenuPanel/VBoxContainer"]
margin_top = 90.0
margin_right = 576.0
margin_bottom = 131.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
text = "MAS JUEGOS"

[node name="Audio" type="AudioStreamPlayer" parent="MenuPanel" groups=["MusicPlayer"]]
stream = ExtResource( 3 )
volume_db = -45.791

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/audio_fade_in = SubResource( 18 )
anims/audio_fade_out = SubResource( 12 )
anims/fade_in_background = SubResource( 19 )
"anims/fade_in_background " = SubResource( 1 )
anims/fade_out_elements = SubResource( 10 )
anims/logo_drop = SubResource( 16 )
anims/logo_dropp_2 = SubResource( 17 )
anims/menu_popup = SubResource( 11 )

[connection signal="pressed" from="MenuPanel/VBoxContainer/PlayBtn" to="." method="_on_PlayBtn_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
[connection signal="pressed" from="MenuPanel/VBoxContainer/MoreGamesBtn" to="." method="_on_MoreGamesBtn_pressed"]
